--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,8 +1,8 @@
-AddonId: AIRyndon.AutoSave
+AddonId: ANRCorleone.AutoSave
 Packages:
   - Version: 1.0.1
     RequiredApiVersion: 6.0.0
     ReleaseDate: 2022-03-05
-    PackageUrl: https://github.com/AIRyndon/AutoSave/releases/download/v1.0.1/auto-save-v1.0.1.pext
+    PackageUrl: https://github.com/ANRCorleone/AutoSave/releases/download/v1.0.1/auto-save-v1.0.1.pext
     Changelog:
       - 'Grab the latest changes from the forked branch'
