--- a/extension.yaml
+++ b/extension.yaml
@@ -1,6 +1,6 @@
 Id: ANRCorleone.AutoSave
 Name: AutoSave
-Author: Angelo Corleone
+Author: ANRCorleone
 Version: 1.0.1
 Module: LudusaviPlaynite.dll
 Type: GenericPlugin
